# max_role_bot

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  index.js  package-lock.json  package.json
contracts/: WagerEscrow.sol
docs/: PROJECT_OVERVIEW.md  SOP.md  terms_of_service.md
legacy/: captainVote.js  deploy-commands.js
legacy/commands/: admin.js  cancel.js  leaderboard.js  wager.js  wallet.js
legacy/xrp/: client.js  escrowManager.js  transactionService.js  walletManager.js
max_role_bot/: .gitignore  package.json  paypalIntegration.js
programs/wager-escrow/: Cargo.toml
programs/wager-escrow/src/: lib.rs
scripts/: approve-escrow-from-spender.js  backup-db.sh  check-changelly-key.js  check-escrow.js  check-ranks-channel.js  check-wallet.js  create-owner-wallet.js  deploy-escrow.js  deploy-test-usdc.js  diagnose-balances.js  emergency-cancel-match.js  fix-key-format.js  force-repost-panels.js  fund-and-test.js  migrate-funds-to-smart-wallet.js  reset-cdp-trial.js  reset-for-mainnet.js  resync-ranks.js  test-complete-flow.js  test-deposit-flow.js  test-escrow-call.js  test-full-flow.js  test-smart-account.js  transfer-admin-to-safe.js
src/: deploy-commands.js  index.js
src/base/: connection.js  depositService.js  escrowManager.js  gasFunder.js  transactionService.js  walletManager.js
src/commands/: rank-context.js  rank.js
src/config/: categoryRoles.js  constants.js  queueConfig.js
src/database/: db.js
src/events/: guildMemberAdd.js  messageCreate.js  (+3 more)
web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
(+261 files in other folders)
