[package]
name = "wager-escrow"
version = "0.1.0"
description = "Solana Anchor escrow program for CoD Mobile wager matches"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wager_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
